# RichBot

./: .gitignore  Cargo.toml  README.md  cmd_outputs.txt
Go-bot/: audit.txt  go.mod  go.sum  main.go  store.db  sub.go  sub.go.bak  tts.py  whisper.py
scratch/: test_mode.rs
src/: brain.rs  cmd_executor.rs  collab.py  eyes.rs  hands.rs  main.rs  model.rs  operations.rs  search_model.rs  sport.rs  styles.rs
