[package]
name = "Code_analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.38"
colored = "3.1.1"
printpdf = "0.9.1"
reqwest = { version = "0.13.2", features = ["json", "blocking", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5.0"
tiny_http = "0.12"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"
url = "2.5"
base64 = "0.22"
fuzzy-matcher = "0.3.7"
